[package]
name = "rust-yew"
version = "0.1.0"
authors = ["Eric Andre <ericandre615@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.17", features = ["services"] }
wasm-bindgen = "0.2.67"
