[package]
name = "rust-yew"
version = "0.3.0"
authors = ["Eric Andre <ericandre615@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.17", features = ["services"] }
yew-router = "0.14.0"
wasm-bindgen = "0.2.67"
web-sys = { version = "0.3.44", features = ["Window", "Storage"] }
serde = "1.0.115"
serde_json = "1.0.57"
yewi = { git = "https://github.com/ericandre615/yewi" }
